--- a/dev.md.html
+++ b/dev.md.html
@@ -336,6 +336,31 @@ Command          | Description
 ]c               | jump to the next change
 [count]do        | :diffget
 [count]dp        | :diffput
+:diffupdate      | update
+
+<meta name="keywords" content="*memo_gtags*">
+gtags
+=======================================================
+~~~
+$ gtags -v
+~~~
+
+<meta name="keywords" content="*memo_global*">
+global
+=======================================================
+~~~
+$ global <func>      # list files
+$ global -x <func>   # detailed list files
+$ global -f files    # list functions
+~~~
+
+<meta name="keywords" content="*memo_gtags.vim*">
+gtags.vim
+=======================================================
+~~~
+:Gtags <func>
+:Gtags -r <func>     # go to the referenced point
+~~~
 
 <meta name="keywords" content="*memo_w3m*">
 w3m
