--- a/links.md.html
+++ b/links.md.html
@@ -103,6 +103,7 @@ Develop
 - [graphviz](https://www.graphviz.org/)
   | [doc](https://qiita.com/rubytomato@github/items/51779135bc4b77c8c20d)
   | [code](http://miffysora.wikidot.com/graphviz)
+- [WinDirStat](https://windirstat.net/)
 
 ## Windows
 - [chocolatey](https://chocolatey.org/)
@@ -123,6 +124,8 @@ Programming
 
 ## Compiler, IDE
 - [clang](https://clang.llvm.org/)
+- [clang-format](https://clang.llvm.org/docs/ClangFormat.html)
+  | [style options](https://clang.llvm.org/docs/ClangFormatStyleOptions.html)
 - [visualstudio](https://www.visualstudio.com/ja/)
 - [androidstudio](https://developer.android.com/studio/?hl=ja)
 - [cmake](https://cmake.org/)
