--- a/os.md.html
+++ b/os.md.html
@@ -52,7 +52,7 @@ choco list -l
 
 choco install -y jdk8
 choco install -y opencv
-choco install -y meshlab fsviewer
+choco install -y meshlab fsviewer windirstat
 ~~~
 
 - PACKAGE.install use native installer
@@ -262,6 +262,7 @@ Option              | 説明
 pacman -S git
 pacman -S subversion
 pacman -S vim ctags vimpager
+pacman -S global
 pacman -S tmux winpty
 pacman -S zip unzip
 pacman -S man-pages-posix
