--- a/prog.md.html
+++ b/prog.md.html
@@ -276,7 +276,7 @@ pip3 install --upgrade tensorflow
 ~~~
 
 <meta name="keywords" content="*memo_make*">
-Make
+Makefile
 =======================================================
 ## for
 ~~~
@@ -288,7 +288,7 @@ loop:
 ~~~
 
 <meta name="keywords" content="*memo_cmake*">
-CMake
+CMakeLists.txt
 =======================================================
 ## Unix Makefiles
 ~~~
