--- a/vcs.md.html
+++ b/vcs.md.html
@@ -269,7 +269,7 @@ git submodule update
 
 ### remove submodule
 ~~~
-git submodule deinit {module}
+git submodule deinit [-f] {module}
 git rm {module}
 ~~~
 
