--- a/dev.md.html
+++ b/dev.md.html
@@ -349,9 +349,10 @@ $ gtags -v
 global
 =======================================================
 ~~~
-$ global <func>      # list files
-$ global -x <func>   # detailed list files
-$ global -f files    # list functions
+$ global func      # list files
+$ global -x func   # detailed list files
+$ global -r func   # list reference files 
+$ global -f files  # list functions
 ~~~
 
 <meta name="keywords" content="*memo_gtags.vim*">
