--- a/vcs.md.html
+++ b/vcs.md.html
@@ -265,6 +265,7 @@ git submodule add URL [dir]
 ~~~
 git submodule init
 git submodule update
+git submodule update --init --recursive
 ~~~
 
 ### remove submodule
