--- a/dev.md.html
+++ b/dev.md.html
@@ -388,11 +388,38 @@ P | C-p                  | prev history
 P | H                    | help
 P | Q                    | quit
 
+<meta name="keywords" content="*memo_visual_studio*">
+<meta name="keywords" content="*memo_vs*">
+Visual Studio
+=======================================================
+
+## plugin
+Tool > Extension
+- VsVim
+
 <meta name="keywords" content="*memo_android*">
-android
+Android
 =======================================================
 ## デバイスの設定
 - 設定 > 開発者向けオプション > USBデバッグをONにする
+
+<meta name="keywords" content="*memo_android_studio*">
+Android Studio
+=======================================================
+
+## plugin
+Settings > Plugins > Install JetBrains plugin...
+- IdeaVim
+
+## build
+~~~
+gradlew tasks
+gradlew build
+gradlew assemble
+gradlew clean
+gradlew installDebug
+gradlew uninstallDebug
+~~~
 
 <meta name="keywords" content="*memo_adb*">
 ## adb
