--- a/dev.md.html
+++ b/dev.md.html
@@ -44,12 +44,12 @@ vim  | F3              | fugitive
 vim  | F4              | agit
 vim  | F5              | close tab
 vim  | F6              | next tab
-tmux | F7              | memo
-tmux | F8              | select next pane
-tmux | F9              | toggle left pane width 60/80
-tmux | F10             | maximize pane
-vim  | F11             | copy
-vim  | F12             | paste
+tmux | F7              | toggle left pane width 60/80
+tmux | F8              | maximize pane
+tmux | F9              | copy in tmux
+tmux | F10             | paste in tmux
+vim  | F11             | copy in vim
+vim  | F12             | paste in vim
 tmux | F1 m            | open man pane
 tmux | F1 t            | open trans pane
 tmux | F1 p            | open python pane
