add links of vim

--- a/links.md.html
+++ b/links.md.html
@@ -87,6 +87,13 @@ Develop
   - [agit](https://github.com/cohama/agit.vim)
 - [color schemes](http://colorswat.ch/vim/)
   - [gruvbox](https://github.com/morhetz/gruvbox)
+- [neovim](https://neovim.io/)
+  - [veonim](https://github.com/veonim/veonim)
+  - [oni2](https://github.com/onivim/oni2)
+- Vim emulation on IDE
+  - [VSCodeVim](https://github.com/VSCodeVim/Vim)
+  - [VsVim](https://github.com/jaredpar/VsVim)
+  - [IdeaVim](https://github.com/JetBrains/ideavim)
 
 ## SKK
 - [SKK Manual](http://skk-dev.github.io/ddskk/skk.html)
