--- a/links.md.html
+++ b/links.md.html
@@ -85,6 +85,8 @@ Develop
   - [vim-gitgutter](https://github.com/airblade/vim-gitgutter)
   - [gitv](https://github.com/gregsexton/gitv)
   - [agit](https://github.com/cohama/agit.vim)
+  - [vim-easymotion](https://github.com/easymotion/vim-easymotion)
+    | [3.0](http://haya14busa.com/vim-easymotion-ver-3-dot-0-overwin-motions/)
 - [color schemes](http://colorswat.ch/vim/)
   - [gruvbox](https://github.com/morhetz/gruvbox)
 - [neovim](https://neovim.io/)
