--- a/os.md.html
+++ b/os.md.html
@@ -274,6 +274,7 @@ pacman -S tmux winpty
 pacman -S zip unzip
 pacman -S man-pages-posix
 pacman -S base-devel
+pacman -S bc
 
 pacman -S mingw-w64-x86_64-toolchain
 pacman -S mingw-w64-x86_64-clang
