--- a/prog.md.html
+++ b/prog.md.html
@@ -223,6 +223,23 @@ imgui
 ## demo
 - ShowDemoWindow()
 
+<meta name="keywords" content="*memo_eigen*">
+Eigen
+=======================================================
+## Matrix
+- Matrix3f m(row, col)
+- m(row, col)
+- column-major storage order
+
+## Vector
+- Vector3f(row)
+- RowVector3f(col)
+
+~~~
+typedef Matrix<float, 3, 1> Vector3f;
+typedef Matrix<float, 1, 3> RowVector3f;
+~~~
+
 <meta name="keywords" content="*memo_opencv*">
 OpenCV
 =======================================================
