--- a/prog.md.html
+++ b/prog.md.html
@@ -223,9 +223,26 @@ imgui
 ## demo
 - ShowDemoWindow()
 
+<meta name="keywords" content="*memo_opengl*">
+opengl
+=======================================================
+
+<meta name="keywords" content="*memo_glsl*">
+glsl
+=======================================================
+
+<meta name="keywords" content="*memo_glm*">
+glm
+=======================================================
+
 <meta name="keywords" content="*memo_eigen*">
 Eigen
 =======================================================
+## the order of multiplying matrix
+\begin{equation}
+v' = M_n * M_{n-1} * ... * M_2 * M_1 * v
+\end{equation}
+
 ## Matrix
 - Matrix3f m(row, col)
 - m(row, col)
