--- a/links.md.html
+++ b/links.md.html
@@ -77,14 +77,15 @@ Develop
 - [vim](https://www.vim.org/)
   | [vim-jp](http://vim-jp.org/)
 - [VimAwesome](https://vimawesome.com/)
+  - [vim-plug](https://github.com/junegunn/vim-plug)
   - [neobundle](https://github.com/Shougo/neobundle.vim)
   - [dein](https://github.com/Shougo/dein.vim)
   - [nerdtree](https://github.com/scrooloose/nerdtree)
   - [nerdtree-git-plugin](https://github.com/Xuyuanp/nerdtree-git-plugin)
   - [vim-fugitive](https://github.com/tpope/vim-fugitive)
   - [vim-gitgutter](https://github.com/airblade/vim-gitgutter)
-  - [gitv](https://github.com/gregsexton/gitv)
   - [agit](https://github.com/cohama/agit.vim)
+  - [gitv](https://github.com/gregsexton/gitv)
   - [vim-easymotion](https://github.com/easymotion/vim-easymotion)
     | [3.0](http://haya14busa.com/vim-easymotion-ver-3-dot-0-overwin-motions/)
 - [color schemes](http://colorswat.ch/vim/)
