--- a/os.md.html
+++ b/os.md.html
@@ -275,6 +275,7 @@ pacman -S zip unzip
 pacman -S man-pages-posix
 pacman -S base-devel
 pacman -S bc
+pacman -S python
 
 pacman -S mingw-w64-x86_64-toolchain
 pacman -S mingw-w64-x86_64-clang
